--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -27,3 +27,23 @@ jobs:
       with:
         name: Package
         path: /home/runner/work/jaas_relational_login/jaas_relational_login/target/JAAS_relational_login.jar
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+    - name: Upload Artifact
+      id: upload_artifact
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: target/JAAS_relational_login.jar
+        asset_name: JAAS_relational_login.jar
+        asset_content_type: application/java-archive
