automatically publish package on github
https://github.com/BiP-org/bip-infrastructure/issues/60

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,16 +4,15 @@
 name: Java CI
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  release:
+    types: [created]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    permissions: 
+      contents: read
+      packages: write
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
