--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,34 +15,26 @@ jobs:
       contents: write
       packages: write
     steps:
-    - uses: actions/checkout@v2
+    - name: setup repository 
+      uses: actions/checkout@v2
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'zulu'
+
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
-    - uses: actions/upload-artifact@v2
-      with:
-        name: Package
-        path: /home/runner/work/jaas_relational_login/jaas_relational_login/target/JAAS_relational_login.jar
+
     - name: Create a Release
-      uses: elgohr/Github-Release-Action@v4
-      env:
-        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      uses: marvinpinto/action-automatic-releases@latest
       with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
         title: Release ${{ github.ref_name }}
-    - name: Upload Artifact
-      id: upload_artifact
-      uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: target/JAAS_relational_login.jar
-        asset_name: JAAS_relational_login.jar
-        asset_content_type: application/java-archive
+        files: |
+         target/JAAS_relational_login.jar
+
     - name: Set maven version from tag
       run: mvn version:set -DnewVersion=${{ github.ref_name }}
     
